--- a/sweeps/car_cdr_rcons/initial.yaml
+++ b/sweeps/car_cdr_rcons/initial.yaml
@@ -3,7 +3,7 @@ name: initial_sweep
 method: bayes
 metric:
   goal: minimize
-  name: valid_loss.min
+  name: valid_loss
 parameters:
   steps:
     max: 12
@@ -16,19 +16,14 @@ parameters:
     min: 0.95
     max: 0.98
     distribution: log_uniform_values
-  ctrl_hidden_dim: 
-    values: [32, 64]
   router_dropout:
     min: 0.0
     max: 0.1
+    distribution: uniform
+  ctrl_hidden_dim: 
+    values: [32, 64]
 command:
   - ${env}
   - python
   - ${program}
-  - "--use_wandb"
-  - "--transformer_norm_first=1"
-  - "--num_warmup_steps=10000"
-  - "--gclip=1"
-  - "--steps=35000"
-  - "--batch_size=16"
-  - "--task_type=car_cdr_rcons"
+  - ${args}
